--- a/board/de2-115/DE2-115-vd_isl.qsf
+++ b/board/de2-115/DE2-115-vd_isl.qsf
@@ -1,12 +1,12 @@
 # -------------------------------------------------------------------------- #
 #
 # Copyright (C) 2019  Intel Corporation. All rights reserved.
-# Your use of Intel Corporation's design tools, logic functions 
-# and other software and tools, and any partner logic 
-# functions, and any output files from any of the foregoing 
-# (including device programming or simulation files), and any 
-# associated documentation or information are expressly subject 
-# to the terms and conditions of the Intel Program License 
+# Your use of Intel Corporation's design tools, logic functions
+# and other software and tools, and any partner logic
+# functions, and any output files from any of the foregoing
+# (including device programming or simulation files), and any
+# associated documentation or information are expressly subject
+# to the terms and conditions of the Intel Program License
 # Subscription Agreement, the Intel Quartus Prime License Agreement,
 # the Intel FPGA IP License Agreement, or other applicable license
 # agreement, including, without limitation, that your use is for
@@ -42,10 +42,10 @@ set_global_assignment -name DEVICE EP4CE115F29C7
 set_global_assignment -name TOP_LEVEL_ENTITY "DE2_115_vd_isl"
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 19.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:32:21  MAY 17, 2020"
-set_global_assignment -name LAST_QUARTUS_VERSION "19.1.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "21.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
+set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
@@ -356,7 +356,7 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to TD_DATA[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to TD_DATA[7]
 
 #============================================================
-# USB 
+# USB
 #============================================================
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OTG_DATA[0]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OTG_DATA[1]
@@ -628,55 +628,55 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to EX_IO[6]
 #============================================================
 # HSMC HDMI adapter
 #============================================================
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_I2C_SCL
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_I2C_SDA
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_I2S
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_LRCLK
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_MCLK
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_SCLK
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_SPDIF
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_CLK
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[8]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[9]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[10]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[11]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[12]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[13]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[14]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[15]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[16]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[17]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[18]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[19]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[20]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[21]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[22]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[23]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[24]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[25]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[26]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[27]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[28]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[29]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[30]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[31]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[32]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[33]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[34]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_D[35]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_DE
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HS
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_INT
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_VS
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_RESET_N
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_I2C_SCL
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_I2C_SDA
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_I2S
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_LRCLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_MCLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_SCLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_SPDIF
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_CLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[11]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[12]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[13]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[14]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[15]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[16]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[17]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[18]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[19]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[20]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[21]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[22]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[23]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[24]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[25]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[26]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[27]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[28]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[29]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[30]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[31]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[32]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[33]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[34]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_D[35]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_DE
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_HS
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_INT
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_VS
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HDMI_TX_HSMC_RESET_N
 
 
 set_location_assignment PIN_J10 -to EX_IO[0]
@@ -1204,60 +1204,70 @@ set_location_assignment PIN_AD15 -to GPIO[8]
 set_location_assignment PIN_AE15 -to GPIO[9]
 set_location_assignment PIN_AH23 -to GPIO[34]
 set_location_assignment PIN_AG26 -to GPIO[35]
-set_location_assignment PIN_R23 -to HDMI_I2C_SCL
-set_location_assignment PIN_R22 -to HDMI_I2C_SDA
-set_location_assignment PIN_P25 -to HDMI_I2S
-set_location_assignment PIN_P26 -to HDMI_LRCLK
-set_location_assignment PIN_R21 -to HDMI_MCLK
-set_location_assignment PIN_P21 -to HDMI_SCLK
-set_location_assignment PIN_L21 -to HDMI_SPDIF
-set_location_assignment PIN_G23 -to HDMI_TX_CLK
-set_location_assignment PIN_H24 -to HDMI_TX_D[0]
-set_location_assignment PIN_H23 -to HDMI_TX_D[1]
-set_location_assignment PIN_K22 -to HDMI_TX_D[2]
-set_location_assignment PIN_K21 -to HDMI_TX_D[3]
-set_location_assignment PIN_M28 -to HDMI_TX_D[4]
-set_location_assignment PIN_M27 -to HDMI_TX_D[5]
-set_location_assignment PIN_K28 -to HDMI_TX_D[6]
-set_location_assignment PIN_K27 -to HDMI_TX_D[7]
-set_location_assignment PIN_M26 -to HDMI_TX_D[8]
-set_location_assignment PIN_M25 -to HDMI_TX_D[9]
-set_location_assignment PIN_L24 -to HDMI_TX_D[10]
-set_location_assignment PIN_L23 -to HDMI_TX_D[11]
-set_location_assignment PIN_K26 -to HDMI_TX_D[12]
-set_location_assignment PIN_K25 -to HDMI_TX_D[13]
-set_location_assignment PIN_H26 -to HDMI_TX_D[14]
-set_location_assignment PIN_H25 -to HDMI_TX_D[15]
-set_location_assignment PIN_G26 -to HDMI_TX_D[16]
-set_location_assignment PIN_G25 -to HDMI_TX_D[17]
-set_location_assignment PIN_E26 -to HDMI_TX_D[18]
-set_location_assignment PIN_F26 -to HDMI_TX_D[19]
-set_location_assignment PIN_C27 -to HDMI_TX_D[20]
-set_location_assignment PIN_D26 -to HDMI_TX_D[21]
-set_location_assignment PIN_F25 -to HDMI_TX_D[22]
-set_location_assignment PIN_F24 -to HDMI_TX_D[23]
-set_location_assignment PIN_AF27 -to HDMI_TX_D[24]
-set_location_assignment PIN_AE28 -to HDMI_TX_D[25]
-set_location_assignment PIN_G28 -to HDMI_TX_D[26]
-set_location_assignment PIN_G27 -to HDMI_TX_D[27]
-set_location_assignment PIN_F28 -to HDMI_TX_D[28]
-set_location_assignment PIN_F27 -to HDMI_TX_D[29]
-set_location_assignment PIN_E28 -to HDMI_TX_D[30]
-set_location_assignment PIN_E27 -to HDMI_TX_D[31]
-set_location_assignment PIN_D28 -to HDMI_TX_D[32]
-set_location_assignment PIN_D27 -to HDMI_TX_D[33]
-set_location_assignment PIN_AE27 -to HDMI_TX_D[34]
-set_location_assignment PIN_AE26 -to HDMI_TX_D[35]
-set_location_assignment PIN_R26 -to HDMI_TX_HS
-set_location_assignment PIN_R25 -to HDMI_TX_VS
-set_location_assignment PIN_T25 -to HDMI_TX_DE
-set_location_assignment PIN_T21 -to HDMI_TX_INT
-set_location_assignment PIN_T22 -to HDMI_TX_RESET_N
+set_location_assignment PIN_R23 -to HDMI_TX_HSMC_I2C_SCL
+set_location_assignment PIN_R22 -to HDMI_TX_HSMC_I2C_SDA
+set_location_assignment PIN_P25 -to HDMI_TX_HSMC_I2S
+set_location_assignment PIN_P26 -to HDMI_TX_HSMC_LRCLK
+set_location_assignment PIN_R21 -to HDMI_TX_HSMC_MCLK
+set_location_assignment PIN_P21 -to HDMI_TX_HSMC_SCLK
+set_location_assignment PIN_L21 -to HDMI_TX_HSMC_SPDIF
+set_location_assignment PIN_G23 -to HDMI_TX_HSMC_CLK
+set_location_assignment PIN_H24 -to HDMI_TX_HSMC_D[0]
+set_location_assignment PIN_H23 -to HDMI_TX_HSMC_D[1]
+set_location_assignment PIN_K22 -to HDMI_TX_HSMC_D[2]
+set_location_assignment PIN_K21 -to HDMI_TX_HSMC_D[3]
+set_location_assignment PIN_M28 -to HDMI_TX_HSMC_D[4]
+set_location_assignment PIN_M27 -to HDMI_TX_HSMC_D[5]
+set_location_assignment PIN_K28 -to HDMI_TX_HSMC_D[6]
+set_location_assignment PIN_K27 -to HDMI_TX_HSMC_D[7]
+set_location_assignment PIN_M26 -to HDMI_TX_HSMC_D[8]
+set_location_assignment PIN_M25 -to HDMI_TX_HSMC_D[9]
+set_location_assignment PIN_L24 -to HDMI_TX_HSMC_D[10]
+set_location_assignment PIN_L23 -to HDMI_TX_HSMC_D[11]
+set_location_assignment PIN_K26 -to HDMI_TX_HSMC_D[12]
+set_location_assignment PIN_K25 -to HDMI_TX_HSMC_D[13]
+set_location_assignment PIN_H26 -to HDMI_TX_HSMC_D[14]
+set_location_assignment PIN_H25 -to HDMI_TX_HSMC_D[15]
+set_location_assignment PIN_G26 -to HDMI_TX_HSMC_D[16]
+set_location_assignment PIN_G25 -to HDMI_TX_HSMC_D[17]
+set_location_assignment PIN_E26 -to HDMI_TX_HSMC_D[18]
+set_location_assignment PIN_F26 -to HDMI_TX_HSMC_D[19]
+set_location_assignment PIN_C27 -to HDMI_TX_HSMC_D[20]
+set_location_assignment PIN_D26 -to HDMI_TX_HSMC_D[21]
+set_location_assignment PIN_F25 -to HDMI_TX_HSMC_D[22]
+set_location_assignment PIN_F24 -to HDMI_TX_HSMC_D[23]
+set_location_assignment PIN_AF27 -to HDMI_TX_HSMC_D[24]
+set_location_assignment PIN_AE28 -to HDMI_TX_HSMC_D[25]
+set_location_assignment PIN_G28 -to HDMI_TX_HSMC_D[26]
+set_location_assignment PIN_G27 -to HDMI_TX_HSMC_D[27]
+set_location_assignment PIN_F28 -to HDMI_TX_HSMC_D[28]
+set_location_assignment PIN_F27 -to HDMI_TX_HSMC_D[29]
+set_location_assignment PIN_E28 -to HDMI_TX_HSMC_D[30]
+set_location_assignment PIN_E27 -to HDMI_TX_HSMC_D[31]
+set_location_assignment PIN_D28 -to HDMI_TX_HSMC_D[32]
+set_location_assignment PIN_D27 -to HDMI_TX_HSMC_D[33]
+set_location_assignment PIN_AE27 -to HDMI_TX_HSMC_D[34]
+set_location_assignment PIN_AE26 -to HDMI_TX_HSMC_D[35]
+set_location_assignment PIN_R26 -to HDMI_TX_HSMC_HS
+set_location_assignment PIN_R25 -to HDMI_TX_HSMC_VS
+set_location_assignment PIN_T25 -to HDMI_TX_HSMC_DE
+set_location_assignment PIN_T21 -to HDMI_TX_HSMC_INT
+set_location_assignment PIN_T22 -to HDMI_TX_HSMC_RESET_N
 
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to HDMI_TX_D
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to HDMI_TX_HS
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to HDMI_TX_VS
-set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to HDMI_TX_DE
+set_instance_assignment -name FAST_INPUT_REGISTER ON -to DRAM_DQ
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to DRAM_ADDR
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to DRAM_BA
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to DRAM_CKE
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to DRAM_CAS_N
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to DRAM_RAS_N
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to DRAM_CS_N
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to DRAM_WE_N
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to DRAM_DQ
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to DRAM_DQM
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to HDMI_TX_HSMC_D
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to HDMI_TX_HSMC_HS
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to HDMI_TX_HSMC_VS
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to HDMI_TX_HSMC_DE
 set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to VGA_R
 set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to VGA_G
 set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to VGA_B
@@ -1281,17 +1291,6 @@ set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
 
 
 
-set_global_assignment -name QIP_FILE sys/synthesis/sys.qip
-set_global_assignment -name QIP_FILE ../../rtl_common/linebuf.qip
-set_global_assignment -name QIP_FILE software/sys_controller/mem_init/meminit.qip
-set_global_assignment -name QIP_FILE rtl/pll.qip
-set_global_assignment -name VERILOG_FILE "rtl/DE2-115-vd_isl.v"
-set_global_assignment -name VERILOG_FILE ../../rtl_common/scanconverter.v
-set_global_assignment -name VERILOG_FILE ../../rtl_common/ir_rcv.v
-set_global_assignment -name VERILOG_FILE ../../rtl_common/ic_frontends/isl51002/isl51002_frontend.v
-set_global_assignment -name SDC_FILE "DE2-115-vd_isl.sdc"
-set_global_assignment -name CDF_FILE "DE2-115-vd_isl.cdf"
-set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
 set_global_assignment -name ENABLE_SIGNALTAP OFF
 set_global_assignment -name USE_SIGNALTAP_FILE output_files/stp1.stp
 
@@ -1309,6 +1308,35 @@ set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
 
 
 
+
+
+
+set_global_assignment -name QIP_FILE sys/synthesis/sys.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/linebuf.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/char_array.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/char_rom.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/dc_fifo_out.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/dc_fifo_in.qip
+set_global_assignment -name QIP_FILE software/sys_controller/mem_init/meminit.qip
+set_global_assignment -name QIP_FILE rtl/pll.qip
+set_global_assignment -name SIP_FILE rtl/pll.sip
+set_global_assignment -name VERILOG_FILE "rtl/DE2-115-vd_isl.v"
+set_global_assignment -name VERILOG_FILE ../../rtl_common/scanconverter.v
+set_global_assignment -name VERILOG_FILE ../../rtl_common/ir_rcv.v
+set_global_assignment -name VERILOG_FILE ../../rtl_common/ic_frontends/isl51002/isl51002_frontend.v
+set_global_assignment -name SDC_FILE "DE2-115-vd_isl.sdc"
+set_global_assignment -name CDF_FILE "DE2-115-vd_isl.cdf"
+set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
+
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO[5]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO[4]
+
+
+set_global_assignment -name CYCLONEII_RESERVE_NCEO_AFTER_CONFIGURATION "USE AS REGULAR IO"
+set_global_assignment -name RESERVE_DATA0_AFTER_CONFIGURATION "USE AS REGULAR IO"
+set_global_assignment -name RESERVE_DATA1_AFTER_CONFIGURATION "USE AS REGULAR IO"
+set_global_assignment -name RESERVE_FLASH_NCE_AFTER_CONFIGURATION "USE AS REGULAR IO"
+set_global_assignment -name RESERVE_DCLK_AFTER_CONFIGURATION "USE AS REGULAR IO"
 
 
 
